[package]
name = "rr-infra-refine"
version = "0.1.0"
edition = "2021"

[lib]
name = "refine"
path = "src/lib.rs"

[dependencies]
# Core infra dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hace ecosystem
dag = { path = "../core/dag", package = "rr-infra-dag-core" }
hacetime = { path = "../core/hacetime", package = "hacetime", features = ["std"] }

# For WASM artifact processing
wasmer = "3.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
default = ["std"]
std = []
